[build-system]
requires = ['hatchling', 'editables']
build-backend = 'hatchling.build'

[project]
name = "ddf-pipeline"
version = "0.1.0"
description = "Pipeline to carry out several iterations of direction-dependent self-calibration on your LOFAR imaging data using DDFacet and KillMS"
authors = [ ]
requires-python = ">=3.10"
dependencies = [
    "astropy==6.1.7",
    "astropy-iers-data==0.2025.6.30.0.39.40",
    "bcrypt==4.3.0",
    "cffi==1.17.1",
    "cryptography==45.0.5",
    "ddfacet",
    "future==1.0.0",
    "killms",
    "numpy", #==2.2.6",
    "packaging==25.0",
    "paramiko==3.5.1",
    "pdu==0.0.3",
    "psutil==7.0.0",
    "pycparser==2.22",
    "pyerfa==2.0.1.5",
    "pymysql==1.1.1",
    "pynacl==1.5.0",
    "pyparsing==3.2.3",
    "pyregion==2.3.0",
    "python-casacore==3.7.1",
    "pyyaml==6.0.2",
    "scipy==1.15.3",
    "six==1.17.0",
    "sshtunnel==0.4.0",
    "treepick==0.1.4",
    "yorn==0.0.6",
]

[project.scripts]
"pipeline.py" = "scripts.pipeline:driver"

[tool.hatch.build.targets.wheel]
packages = [
         "others",
         "utils",
         "scripts",
]

[tool.uv.sources]
#ddfacet = { git = "https://github.com/cyriltasse/DDFacet", rev = "79cab91b83bf611476d0d779334fb5c81d29530a" }
#killms = { git = "https://github.com/cyriltasse/killMS", rev = "b7aa9d4b1d0c929286863cfc0eac32edbcd2cb48" }
ddfacet = { git = "file:///home/dguibert/code/DDFacet", rev = "58e758d08f9ce108dc60d6ae3f17d4079fef6387" }
killms = { git = "file:///home/dguibert/code/killMS", rev = "76975d727a1eecd42ae35e58e54a9881c35f490e" }
#ddfacet = { path = "../DDFacet" }
